<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.ChangeTypeFragment">

    <TextView
        android:id="@+id/_chooseTypeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/choose_type_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.jaredrummler.materialspinner.MaterialSpinner
        android:id="@+id/ChangeTypeSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/_chooseTypeText"
        app:ms_arrow_tint="@color/colorPrimary"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/StartTomatoButton"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="32dp"
        android:text="@string/start_tomato_button_text"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/ChangeTypeSpinner"
        app:layout_constraintStart_toStartOf="@+id/ChangeTypeSpinner" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ChangeTypePastTomatosRV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/StartTomatoButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        tools:listitem="@layout/past_tomato_rv_item" />

    <TextView
        android:id="@+id/_tomatosTodayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/todays_tomatos_text"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ChangeTypeSpinner" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="64dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="@+id/ChangeTypeSpinner"
        app:layout_constraintStart_toStartOf="@+id/ChangeTypeSpinner"
        app:layout_constraintTop_toBottomOf="@+id/_tomatosTodayText" />
</androidx.constraintlayout.widget.ConstraintLayout>